#34: Added linebreak for offer section, corrected markup and styles to fit in small screens. #30: Added new blurred bg.

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -130,7 +130,6 @@ $below_large: "only screen and (max-width:"#{$large-screen}")";
       }
     }
     .offer_block {
-      min-height: 464px;
       padding-bottom: 1px;
       margin-bottom: 20px;
       .heading {
