--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -18,10 +18,15 @@ $offer_block_min_height: 500px;
     font-size: 23px;
     color: $dark_blue;
     margin-bottom: 10px;
+    &.bolder {
+      font-weight: 700;
+      font-style: italic;
+      margin-top: 20px;
+    }
   }
   .panel {
+    margin-top: 40px;
     border-radius: $radius;
-    margin: 30px 15px 20px;
     @extend .smooth_shadow;
     .heading_two {
       font-size: 33px;
@@ -100,7 +105,7 @@ $offer_block_min_height: 500px;
     .partner {
       @include inline-block(bottom);
       line-height: 60px;
-      margin: 0 15px;
+      margin: 0 15px 10px;
       .partners-logo_paypal {
         margin-bottom: -8px;
       }
@@ -120,15 +125,13 @@ $offer_block_min_height: 500px;
 $catch_section_min_height: 450px;
 .catch_section {
   padding-top: 60px;
-  background: $blue url("../images/pat_blueprint.png") repeat;
-  .dark_bg {
-    background: transparentize($black, 0.4);
-  }
+  background: #33451c url("../images/blur_bg_1.jpg") no-repeat 50%;
+  background-size: cover;
   .s_footer {
     padding-top: 36px;
     padding-bottom: 26px;
     margin-top: 20px;
-    @extend .dark_bg;
+    background: transparentize($black, 0.75);
     .message {
       font-size: 23px;
       color: $white;
@@ -142,20 +145,24 @@ $catch_section_min_height: 450px;
     font-size: 90px;
     font-weight: 900;
     color: $dark_blue;
+    text-align: left;
     margin-bottom: 60px;
   }
   .sub_heading {
     font-size: 30px;
     font-weight: 700;
     color: $dark_blue;
+    text-align: left;
     margin-bottom: 30px;
   }
   .message {
     font-size: 30px;
     line-height: 48px;
+    text-align: left;
     color: $white;
   }
   .map_wrap {
+    text-align: center;
     padding-bottom: 30px;
     line-height: $catch_section_min_height;
     min-height: $catch_section_min_height;
